Add Google Search Console verification

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Maxence Minarro, développeur web à Nîmes (30). Étudiant BTS SIO SLAM spécialisé en PHP, MySQL, JavaScript et architecture MVC. Portfolio et projets.">
     <meta name="keywords" content="Maxence Minarro, développeur web Nîmes, développeur Nîmes, portfolio, PHP, MySQL, JavaScript, HTML, CSS, BTS SIO, SLAM, Nîmes, Gard, 30">
     <meta name="author" content="Maxence Minarro">
+    <meta name="google-site-verification" content="CQfcqQu5K-HvF21MNhnQiM8goRAV6qa6olh7q_zGS1A" />
     <meta name="geo.region" content="FR-30">
     <meta name="geo.placename" content="Nîmes">
     <meta name="geo.position" content="43.8367;4.3601">
