--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="geo.placename" content="Nîmes">
     <meta name="geo.position" content="43.8367;4.3601">
     <meta name="ICBM" content="43.8367, 4.3601">
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
     <link rel="canonical" href="https://maxenceminarro.github.io/">
 
     <!-- Open Graph (Facebook, LinkedIn) -->
@@ -21,8 +22,14 @@
     <meta property="og:description" content="Maxence Minarro, développeur web à Nîmes. Étudiant BTS SIO SLAM spécialisé en PHP, MySQL, JavaScript et architecture MVC.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://maxenceminarro.github.io/">
-    <meta property="og:image" content="https://maxenceminarro.github.io/img/preview.png">
+    <meta property="og:image" content="https://maxenceminarro.github.io/img/tennis-1.png">
     <meta property="og:locale" content="fr_FR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Maxence Minarro | Développeur Web à Nîmes">
+    <meta name="twitter:description" content="Maxence Minarro, développeur web à Nîmes. Étudiant BTS SIO SLAM spécialisé en PHP, MySQL, JavaScript et architecture MVC.">
+    <meta name="twitter:image" content="https://maxenceminarro.github.io/img/tennis-1.png">
 
     <!-- Schema.org JSON-LD pour le SEO local -->
     <script type="application/ld+json">
@@ -65,7 +72,7 @@
 
     <!-- Navigation -->
     <nav class="nav">
-        <a href="#" class="nav-logo">Maxence<span class="accent">.</span></a>
+        <a href="#accueil" class="nav-logo">Maxence<span class="accent">.</span></a>
         <button class="nav-toggle" aria-label="Menu">
             <span></span>
             <span></span>
@@ -134,7 +141,10 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="project-image">
-                            <img src="img/tennis-1.png" alt="Tableau de bord Tennis Club">
+                            <picture>
+                                <source srcset="img/tennis-1.webp" type="image/webp">
+                                <img src="img/tennis-1.png" alt="Tableau de bord Tennis Club" loading="lazy">
+                            </picture>
                         </div>
                         <div class="project-content">
                             <span class="project-category">Application Web</span>
@@ -160,11 +170,17 @@
                     </div>
                     <div class="flip-card-back">
                         <div class="back-image">
-                            <img src="img/tennis-2.png" alt="Gestion des Licenciés">
+                            <picture>
+                                <source srcset="img/tennis-2.webp" type="image/webp">
+                                <img src="img/tennis-2.png" alt="Gestion des Licenciés" loading="lazy">
+                            </picture>
                             <span class="back-label">Gestion des Licenciés</span>
                         </div>
                         <div class="back-image">
-                            <img src="img/tennis-3.png" alt="Gestion du Bureau">
+                            <picture>
+                                <source srcset="img/tennis-3.webp" type="image/webp">
+                                <img src="img/tennis-3.png" alt="Gestion du Bureau" loading="lazy">
+                            </picture>
                             <span class="back-label">Gestion du Bureau</span>
                         </div>
                     </div>
@@ -176,7 +192,10 @@
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="project-image">
-                            <img src="img/project2-front.png" alt="DBS4MATHS - Accueil">
+                            <picture>
+                                <source srcset="img/project2-front.webp" type="image/webp">
+                                <img src="img/project2-front.png" alt="DBS4MATHS - Accueil" loading="lazy">
+                            </picture>
                         </div>
                         <div class="project-content">
                             <span class="project-category">Plateforme Web</span>
@@ -197,7 +216,10 @@
                     </div>
                     <div class="flip-card-back">
                         <div class="back-image-single">
-                            <img src="img/project2-back.png" alt="DBS4MATHS - Jeux">
+                            <picture>
+                                <source srcset="img/project2-back.webp" type="image/webp">
+                                <img src="img/project2-back.png" alt="DBS4MATHS - Jeux" loading="lazy">
+                            </picture>
                             <span class="back-label">Sélection des jeux</span>
                         </div>
                     </div>
@@ -303,19 +325,27 @@
                     N'hésitez pas à me contacter, je serai ravi d'échanger avec vous !
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:minarro.maxence@icloud.com" class="contact-link">
-                        <div class="contact-icon">
-                            <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
-                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M22 6l-10 7L2 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <div class="contact-link-wrapper">
+                        <a href="mailto:minarro.maxence@icloud.com" class="contact-link">
+                            <div class="contact-icon">
+                                <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                                    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M22 6l-10 7L2 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="contact-detail">
+                                <span class="contact-label">Email</span>
+                                <span class="contact-value">minarro.maxence@icloud.com</span>
+                            </div>
+                        </a>
+                        <button class="copy-email-btn" data-email="minarro.maxence@icloud.com" aria-label="Copier l'email">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+                                <rect x="9" y="9" width="13" height="13" rx="2" stroke="currentColor" stroke-width="1.5"/>
+                                <path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1" stroke="currentColor" stroke-width="1.5"/>
                             </svg>
-                        </div>
-                        <div class="contact-detail">
-                            <span class="contact-label">Email</span>
-                            <span class="contact-value">minarro.maxence@icloud.com</span>
-                        </div>
-                    </a>
-                    <a href="https://linkedin.com/in/MaxenceMinarro" target="_blank" class="contact-link">
+                        </button>
+                    </div>
+                    <a href="https://linkedin.com/in/MaxenceMinarro" target="_blank" rel="noopener noreferrer" class="contact-link">
                         <div class="contact-icon">
                             <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                                 <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2zM4 6a2 2 0 100-4 2 2 0 000 4z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -326,7 +356,7 @@
                             <span class="contact-value">Voir mon profil</span>
                         </div>
                     </a>
-                    <a href="https://github.com/MaxenceMinarro" target="_blank" class="contact-link">
+                    <a href="https://github.com/MaxenceMinarro" target="_blank" rel="noopener noreferrer" class="contact-link">
                         <div class="contact-icon">
                             <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                                 <path d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.865 8.166 6.839 9.489.5.092.682-.217.682-.482 0-.237-.008-.866-.013-1.7-2.782.603-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.003.07 1.531 1.03 1.531 1.03.892 1.529 2.341 1.087 2.91.831.092-.646.35-1.086.636-1.336-2.22-.253-4.555-1.11-4.555-4.943 0-1.091.39-1.984 1.029-2.683-.103-.253-.446-1.27.098-2.647 0 0 .84-.269 2.75 1.025A9.578 9.578 0 0112 6.836c.85.004 1.705.114 2.504.336 1.909-1.294 2.747-1.025 2.747-1.025.546 1.377.203 2.394.1 2.647.64.699 1.028 1.592 1.028 2.683 0 3.842-2.339 4.687-4.566 4.935.359.309.678.919.678 1.852 0 1.336-.012 2.415-.012 2.743 0 .267.18.578.688.48C19.138 20.163 22 16.418 22 12c0-5.523-4.477-10-10-10z" fill="currentColor"/>
@@ -374,15 +404,15 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <a href="#" class="footer-logo">Maxence<span class="accent">.</span></a>
+            <a href="#accueil" class="footer-logo">Maxence<span class="accent">.</span></a>
             <p class="footer-text">© 2026 Maxence Minarro. Tous droits réservés.</p>
             <div class="footer-social">
-                <a href="https://github.com/MaxenceMinarro" aria-label="GitHub">
+                <a href="https://github.com/MaxenceMinarro" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                         <path d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.865 8.166 6.839 9.489.5.092.682-.217.682-.482 0-.237-.008-.866-.013-1.7-2.782.603-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.003.07 1.531 1.03 1.531 1.03.892 1.529 2.341 1.087 2.91.831.092-.646.35-1.086.636-1.336-2.22-.253-4.555-1.11-4.555-4.943 0-1.091.39-1.984 1.029-2.683-.103-.253-.446-1.27.098-2.647 0 0 .84-.269 2.75 1.025A9.578 9.578 0 0112 6.836c.85.004 1.705.114 2.504.336 1.909-1.294 2.747-1.025 2.747-1.025.546 1.377.203 2.394.1 2.647.64.699 1.028 1.592 1.028 2.683 0 3.842-2.339 4.687-4.566 4.935.359.309.678.919.678 1.852 0 1.336-.012 2.415-.012 2.743 0 .267.18.578.688.48C19.138 20.163 22 16.418 22 12c0-5.523-4.477-10-10-10z" fill="currentColor"/>
                     </svg>
                 </a>
-                <a href="https://linkedin.com/in/MaxenceMinarro" target="_blank" aria-label="LinkedIn">
+                <a href="https://linkedin.com/in/MaxenceMinarro" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
                         <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2zM4 6a2 2 0 100-4 2 2 0 000 4z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>                    </svg>
                 </a>
