Fix: hauteurs flip-card mobile + hint survoler simplifié

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <span class="tag">RGPD</span>
                                 <span class="tag">Sécurité ANSSI</span>
                             </div>
-                            <span class="flip-hint">↻ Survoler pour voir plus</span>
+                            <span class="flip-hint">↻ Survoler</span>
                         </div>
                     </div>
                     <div class="flip-card-back">
